AlexandeVelez.github.io

--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Zdravitsa</title>
+
+<head>
+  <meta charset="utf-8">
+  <title>Zdravitsa</title>
+<style media="screen">
+  h1 {
+    color: black;
+    font-size:12px;
+  }
+  body {
+    background-image: url("sovietflag.jfif");
+    background-color: #cccccc;
+  }
+  * {
+    font-family: times new roman ms;
+  }
+  p {
+    color: red;
+  }
+</style>
   </head>
   <body>
-
-  Manifesto of the Communist Party
-  by Karl Marx and Frederick Engels
+<video width="320" height="240" controls>
+  <source src=""
+    <h1>Manifesto of the Communist Party<h1>
+      <p>Play my unrelated <a href="game/game.html">game</a>.</p>
+    by Karl Marx and Frederick Engels
   February 1848
   Written: Late 1847;
   First Published: February 1848;
@@ -76,7 +95,6 @@
   Karl Marx & Frederick Engels
   January 21, 1882, London
 
-
   Preface to The 1883 German Edition
   The preface to the present edition I must, alas, sign alone. Marx, the man to whom the whole working class of Europe and America owes more than to any one else – rests at Highgate Cemetery and over his grave the first grass is already growing. Since his death [March 14, 1883], there can be even less thought of revising or supplementing the Manifesto. But I consider it all the more necessary again to state the following expressly:
   The basic thought running through the Manifesto – that economic production, and the structure of society of every historical epoch necessarily arising therefrom, constitute the foundation for the political and intellectual history of that epoch; that consequently (ever since the dissolution of the primaeval communal ownership of land) all history has been a history of class struggles, of struggles between exploited and exploiting, between dominated and dominating classes at various stages of social evolution; that this struggle, however, has now reached a stage where the exploited and oppressed class (the proletariat) can no longer emancipate itself from the class which exploits and oppresses it (the bourgeoisie), without at the same time forever freeing the whole of society from exploitation, oppression, class struggles – this basic thought belongs solely and exclusively to Marx.*
@@ -100,7 +118,6 @@
   The present translation is by Mr Samuel Moore, the translator of the greater portion of Marx’ s “Capital.” We have revised it in common, and I have added a few notes explanatory of historical allusions.
   Frederick Engels
   January 30, 1888, London
-
 
   Preface to The 1890 German Edition
   Since [the first German preface of 1883] was written, a new German edition of the Manifesto has again become necessary, and much has also happened to the Manifesto which should be recorded here.
@@ -137,7 +154,6 @@
   The Manifesto does full justice to the revolutionary part played by capitalism in the past. The first capitalist nation was Italy. The close of the feudal Middle Ages, and the opening of the modern capitalist era are marked by a colossal figured: an Italian, Dante, both the last poet of the Middle Ages and the first poet of modern times. Today, as in 1300, a new historical era is approaching. Will Italy give us the new Dante, who will mark the hour of birth of this new, proletarian era?
   Frederick Engels
   London, February 1, 1893
-
 
   Manifesto of the Communist Party
   A spectre is haunting Europe – the spectre of communism. All the powers of old Europe have entered into a holy alliance to exorcise this spectre: Pope and Tsar, Metternich and Guizot, French Radicals and German police-spies.
@@ -440,8 +456,6 @@
   Secretary: Heide [Alias of Wilhelm Wolff in the League of the Just]
   President: Karl Schill [Alias of Karl Schapper in the League of the Just]
   London, June 9, 1847
-
-
   The Principles of Communism*
   In 1847 Engels wrote two draft programmes for the Communist League in the form of a catechism, one in June and the other in October. The latter, which is known as Principles of Communism, was first published in 1914. The earlier document “Draft of the Communist Confession of Faith”, was only found in 1968. It was first published in 1969 in Hamburg, together with four other documents pertaining to the first congress of the Communist League, in a booklet entitled Gründungs Dokumente des Bundes der Kommunisten (Juni bis September 1847) [Founding Documents of the Communist League].
   At the June 1847 Congress of the League of the Just, which was also the founding conference of the Communist League, it was decided to issue a draft “confession of faith” to be submitted for discussion to the sections of the League. The document which has now come to light is almost certainly this draft. Comparison of the two documents shows that Principles of Communism is a revised edition of this earlier draft. In Principles of Communism, Engels left three questions unanswered, in two cases with the notation “unchanged” (bleibt); this clearly refers to the answers provided in the earlier draft.
@@ -636,15 +650,12 @@
   In Germany, finally, the decisive struggle now on the order of the day is that between the bourgeoisie and the absolute monarchy. Since the communists cannot enter upon the decisive struggle between themselves and the bourgeoisie until the bourgeoisie is in power, it follows that it is in the interest of the communists to help the bourgeoisie to power as soon as possible in order the sooner to be able to overthrow it. Against the governments, therefore, the communists must continually support the radical liberal party, taking care to avoid the self-deceptions of the bourgeoisie and not fall for the enticing promises of benefits which a victory for the bourgeoisie would allegedly bring to the proletariat. The sole advantages which the proletariat would derive from a bourgeois victory would consist
   (i) in various concessions which would facilitate the unification of the proletariat into a closely knit, battle-worthy, and organized class; and
   (ii) in the certainly that, on the very day the absolute monarchies fall, the struggle between bourgeoisie and proletariat will start. From that day on, the policy of the communists will be the same as it now is in the countries where the bourgeoisie is already in power.
-
-
   Demands of the Communist Party in Germany
   “Demands of the Communist Party in Germany” were written by Karl Marx and Frederick Engels in Paris between March 21 (when Engels arrived in Paris from Brussels) and March 24, 1848. This document was discussed by members of the Central Authority, who approved and signed it as the. political programme of the Communist League in the revolution that broke out in Germany. In March it was printed as a leaflet, for distribution among revolutionary German emigrant workers who were about to return home. Austrian and German diplomats in Paris informed their respective governments about this as early as March 27, 28 and 29. (The Austrian Ambassador enclosed in his letter a copy of the leaflet which he dated “March 25”.) The leaflet soon reached members of the Communist League in other countries, in particular, German emigrant workers in London.
   Early in April, the “Demands of the Communist Party in Germany” were published in such German democratic papers as Berliner Zeitungs-Halle (special supplement to No. 82, April 5, 1848), Düsseldorfer Zeitung (No. 96, April 5, 1848), Mannheimer Abendzeitung (No. 96, April 6, 1848), Trier’sche Zeitung (No. 97, April 6, 1848, supplement), Deutsche Allgemeine Zeitung (No. 100, April 9, 1848, supplement), and Zeitung für das deutsche Volk (No. 2 1, April 9, 1848).
   Marx and Engels, who left for Germany round about April 6 and some time later settled in Cologne, did their best along with their followers to popularise this programme document during the revolution. In 1848 and 1849 it was repeatedly published in the periodical press and in leaflet form. Not later than September 10, 1848, the “Demands” were printed in Cologne as a leaflet for circulation by the Cologne Workers’ Association both in the town itself and in a number of districts of Rhenish Prussia. In addition to minor stylistic changes, point 10 in the text of the leaflet was worded differently from that published in March-April 1848. At the Second Democratic Congress held in Berlin in October 1848, Friedrich Beust, delegate from the Cologne Workers’ Association, spoke, on behalf of the social question commission, in favour of adopting a programme of action closely following the “Demands”. In November and December 1848, various points of the “Demands” were discussed at meetings of the Cologne Workers’ Association. Many editions of the “Demands” published during the revolution and after its defeat have survived to this day in their original form, some of them as copies kept in the police archives.
   At the end of 1848 or the beginning of 1849 an abridged version of the “Demands” was published in pamphlet form by Weller Publishers in Leipzig. The slogan at the beginning of the document, the second paragraph of point 9 and the last sentence of point 10 were omitted, and the words “The Committee” were not included among the signatories. In 1853, an abridged version of the “Demands” was printed, together with other documents of the Communist League, in the first part of the book Die Communisten-Verschworungen des neunzehnten Jahrhunderts published in Berlin for purposes of information by Wermuth and Stieber, two police officials, who staged a trial against the Communists in Cologne in 1852. Later Engels reproduced the main points of the “Demands” in his essay On the History of the Communist League, published in November 1885 in the newspaper Sozialdemokrat, and as an introduction to the pamphlet: K. Marx, Enthüllungen über den Kommunisten Prozess zu Köln, Hottingen-Zürich, 1885.
   English translations of the “Demands of the Communist Party in Germany” appeared in the collections: The Communist Manifesto of Karl Marx and Friedrich Engels with an introduction and explanatory notes by D. Ryazanoff, Martin Lawrence, London (1930); K. Marx, Selected Works, Vol. II, ed. V. Adoratsky, Moscow-Leningrad, Co-operative Publishing Society of Foreign Workers in the USSR (1936); ibid., New York (1 936); Birth of the Communist Manifesto, edited and annotated, with an Introduction by D. J. Struik, International Publishers, New York, 197 1, and in other publications.
-
   Demands of the Communist Party in Germany
   “Workers of all countries, unite!”
   1. The whole of Germany shall be declared a single and indivisible republic.
@@ -671,7 +682,6 @@
   It is to the interest of the German proletariat, the petty bourgeoisie and the small peasants to support these demands with all possible energy. Only by the realisation of these demands will the millions in Germany, who have hitherto been exploited by a handful of persons and whom the exploiters would like to keep in further subjection, win the rights and attain to that power to which they are entitled as the producers of all wealth.
   The Committee
   Karl Marx, Karl Schapper, H. Bauer, F. Engels, J. Moll, W. Wolff
-
   The Paris Commune.
   Address to the International Workingmen’s Association, May 1871
   The “Paris Commune” was composed by Karl Marx as an address to the General Council of the International, and included in a book, “The Civil War in France,” with the aim of distributing to workers of all countries a clear understanding of the character and world-wide significance of the heroic struggle of the Communards and their historical experience to learn from. The book was widely circulated by 1872 it was translated into several languages and published throughout Europe and the United States.
@@ -730,4 +740,4 @@
   This is the Paris of M. Thiers, as the emigration of Coblenz was the France of M. de Calonne.
 
   </body>
-</html>
+  </html>
