--- a/about.html
+++ b/about.html
@@ -3,9 +3,10 @@
   <head>
       <meta charset="utf-8">
       <title>About</title>
+      <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     I made this page because idk
-    <a href="hidden.html">click the link!</a>
+    <a href="other/hidden.html">click the link!</a>
   </body>
 </html>
