--- a/about.html
+++ b/about.html
@@ -1,12 +1,55 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-      <meta charset="utf-8">
-      <title>About</title>
-      <link rel="stylesheet" href="css/style.css">
-  </head>
-  <body>
-    I made this page because idk
-    <a href="other/hidden.html">click the link!</a>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial scale=1.0">
+  <title>about page</title>
+  <link rel="stylesheet" href="css/stylesheet.css">
+  <script src="js/index.js"></script>
+
+</head>
+
+<body>
+  <div id="parentBox">
+    <div id="headerBox">
+      <h2>About Me</h2>
+    </div>
+
+    <div id="navparentBox">
+      <div class="navBox" onclick="openNav()">
+        ☰
+      </div>
+      <div class="navBox" onclick="closeNav()">
+        X
+      </div>
+    </div>
+    <div id="menuBox">
+      <div class="detailBox">
+        <a href="index.html">Home</a>
+      </div>
+
+      <div class="detailBox">
+        <a href="about.html">About</a>
+      </div>
+
+      <div class="detailBox">
+        <a href="../AlexandeVelez.github.io/game/gettoschool/index.html">Game</a>
+      </div>
+    </div>
+
+    <div id="paragraphBox">
+      <p>
+        I am a student in the IT rotation division at York Tech. I have had an informative and enjoyable marking period in the programming shop. I am interested in the Cybersecurity field and am planning to go into it after graduation. I am a member of the Esports club.
+      </p>
+    </div>
+
+    <div id="imgBox">
+      <img src="img\codepic.png" alt="html code" class="center">
+    </div>
   </body>
+
+
+
+
 </html>
