--- a/other/hidden.html
+++ b/other/hidden.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>hidden page</title>
-  
-  </head>
-  <body>
-    idk
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>hidden page</title>
+  <link rel="stylesheet" href="../css/style.css">
+</head>
+
+<body>
+  idk
+</body>
+
 </html>
