--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
 
       <div class="detailBox">
-        <a href="../AlexandeVelez.github.io/game/gettoschool/index.html">Game</a>
+        <a href="game/gettoschool/index.html">Game</a>
       </div>
     </div>
 
